fix: Fix sub menu z-index.

--- a/anti-apple/src/components/Navigation.module.css
+++ b/anti-apple/src/components/Navigation.module.css
@@ -70,7 +70,7 @@
     position: absolute; /* 下のtop・leftの基準を決める */
     top: 50px; /* ナビゲーションメニューの高さが50だからそれに合わせる．この設定でサブメニューをメナビゲーションメニューの真下に配置できる． */
     left: 0; /* サブメニューの左右は格安SIMの概要メニューに揃える */
-    z-index: 1; /* 要素の重なりを制御．0だとカルーセルの下に隠れる */
+    z-index: 2; /* 要素の重なりを制御．0だとカルーセルの下に隠れる 1だとスライダーのボタンの下に隠れた */
 }
 /* サブメニューの1要素 */
 .navSub {
